<resources>
    <string name="app_name">WOH</string>
    <string name="str1">मुस्कराहट ☺️ का कोई मोल नहीं होता
कुछ रिश्तो 👩‍❤️‍👩 का कोई तोल नहीं होता
वैसे लोग 👥 तो मिल जाते है हर मोड़ पर
पर कोई आप की तरह अनमोल 💎 नहीं होता ।</string>
    <string name="str2">मेरी बेपनाह मोहब्बत ❣️ का एक ही उसूल है,
मिले या ना मिले तू हर हाल मे कबूल है 🥰🥰</string>
    <string name="str3">कोई मिले इस तरह कि फिर जुदा न हो,
समझे मेरा मिजाज और कभी खफा न हो 🙅‍♂,
अपने एहसास से बाँट ले सारी तन्हाई मेरी 🙂,
इतना प्यार ❤️ दे जो किसी ने किसी को किया न हो 🥰।</string>
    <string name="str4">हर पर्वत 🏔️ को झुका नही सकते,
हर दरिया को सुखा नही सकते,
तुम हमे भूल जाओ भले ही,
लेकिन हम तुम्हे कभी भुला नही सकते 🤗❤️</string>
    <string name="str5">भंवर से निकल कर एक किनारा मिला है,
जीने को फिर एक सहारा मिला है 🥹,
बहुत कश्मकश में थी ये जिंदगी मेरी,
अब इस जिंदगी में साथ तुम्हारा मिला है 🤗☺️।</string>
    <string name="str6">मैं यूँ मिलूँ तुझसे की तेरा लिबास बन जाऊँ☺️,
तुझे बना कर समंदर 🌊 खुद प्यास बन जाऊँ,
आज पहलू में टूट कर बिखर जाऊँ,
कल को शायद मुमकिन नही हो मैं तुझको पाऊँ ☺️।</string>
    <string name="str7">क्यों किसी से इतना प्यार ❤️ हो जाता है,
एक दिन का भी इंतज़ार ⏰ दुष्वार हो जाता है,
अपने भी लगने लगते हैं पराये,
जब एक अजनबी पर एतवार हो जाता है 🤗।</string>
    <string name="str8">क्यों किसी से इतना प्यार ❤️ हो जाता है,
एक दिन का भी इंतज़ार ⏰ दुष्वार हो जाता है,
अपने भी लगने लगते हैं पराये,
जब एक अजनबी पर एतवार हो जाता है 🤗।</string>
    <string name="str9">ज़िंदगी में आपकी एहमियत हम आपको बता नहीं सकते 🥺,
दिल ❤️ में आपकी जगह हम आपको दिखा 👀 नहीं सकते,
कुछ रिश्ते बोहत अनमोल 💎 होते है,
इससे जयादा हम आपको समझा नहीं सकते ☺️।</string>
    <string name="str10">पहली मोहब्बत ❣️ थी और हम जान न सके,
ये प्यार ❤️ क्या होता है पहचान न सके,
हमने उन्हें दिल ❤️ में बसाया है इस कदर,
दिल ❤️ से निकालना चाहा तो निकाल न सके।</string>
    <string name="str11">कुछ रिश्तों 👩‍❤️‍👩 की चमक नहीं जाती,
कुछ यादों की कसक नहीं जाती,
कुछ दोस्तों 🫂 से होता है ऐसा रिश्ता,
के दूर रह कर भी उनकी महक नहीं जाती🤗🤗 ।</string>
    <string name="str12">एक सपने 💭 की तरह सजा कर रखु,
अपने इस दिल ❤️ में हमेशा छुपा 🫣 कर रखु,
मेरी तक़दीर मेरे साथ नहीं वर्ना,
ज़िंदगी भर के लिए उसे अपना बना कर रखु 🥰 </string>
    <string name="str13">प्यार ❤️ क्या होता है हम नहीं जानते,
अपनी ही ज़िंदगी को हम अपना नहीं मानते,
गम 🙁 इतना मिला है के अब एहसास नहीं होता,
प्यार ❤️ कोई करे हमसे तो हमें विश्वास नहीं होता ।</string>
    <string name="str14">जब कोई ख्याल 🤔 दिल ❤️ से टकराता है,
दिल ❤️ न चाह कर भी खामोश 🤫 रह जाता है,
कोई सब कुछ कहकर 🗣️ प्यार ❣️ जताता है,
कोई कुछ न कहकर 🗣️ भी सब बोल जाता है।</string>
    <string name="str15">जिंदगी में कोई प्यार ❣️ से प्यारा नही मिलता,
जिंदगी में कोई प्यार ❣️ से प्यारा नही मिलता,
जो है पास आपके उसको सम्भाल कर रखना ☺️,
क्योंकि एक बार खोकर प्यार ❤️ दोबारा नही मिलता ।</string>
    <string name="str16">तू तोड़ दे वो कसम जो तूने खाई है,
कभी याद 💭 करने में क्या 🤷‍♂️बुराई है,
तुझे याद 💭 किये बिना रहा भी तो नही जाता,
तूने दिल ❤️ में जगह जो ऐसी बनाई है।</string>
    <string name="str17">हमे फिर सुहाना नज़ारा 👀☺️ मिला है,
क्योंकि जिंदगी में साथ तुम्हारा मिला है 🥰🥰,
अब जिंदगी में कोई ख्वाइश नही रही,
क्योंकि हमे अब तुम्हारी बाहों का सहारा मिला है 🥰🫣।</string>
    <string name="str18">हम आपसे दूर है तो कुछ गम 🙃 नही,
दूर रह कर भी भूलने बाले हम नही 🙂,
दूर रह कर मुलाकात 🤝 नही हो पाती तो क्या हुआ,
तेरी यादे भी किसी मुलाकात 🤝 से कम नही।</string>
    <string name="str19">अब न हम तुझे खोएंगे 🙅‍♂,
अब न तेरी याद में रोयेंगे 🥺,
अब तो बस हम यही कहेंगे 🗣️,
अब तो बस तेरे साथ में रहेंगे 🥰।</string>
    <string name="str20">हर पल मोहब्बत ❤️ करने का वादा है आपसे,
हर पल ⏰ साथ 🤝 निभाने का वादा है आपसे,
कभी ये मत समझ न हम आपको भूल जायेंगे,
जिंदगी भर साथ चलने का वादा है आपसे🥰।</string>
    <string name="str21">जिसको आज मुझमे हजारो गलतिया नजर 👀 आती हैं,
कभी उसी ने कहा 🗣️ था तुम जैसे भी हो मेरे हो 🥺</string>
    <string name="str22">मैं बैठूंगा जरूर महफ़िल में मगर पियूँगा 🍷 नहीं 🙅‍♂,
क्योंकि मेरा गम 🙃 मिटा दे इतनी शराब 🍷 की औकात नहीं।</string>
    <string name="str23">उस मोड़ से शुरू करनी है फिर से जिंदगी,
जहा सारा शहर 🏢 अपना था और तुम अजनबी 🙃।</string>
    <string name="str24">बेवफाई उसकी दिल ❤️ से मिटा के आया हूँ,
ख़त ✉️ भी उसके पानी 💧 में बहा के आया हूँ,
कोई पढ़ 📖 न ले उस बेवफा की यादों को,
इसलिए पानी 💧 में भी आग 🔥 लगा कर आया हूँ।</string>
    <string name="str25">सोचा 🤔 था तड़पायेंगे हम उन्हें,
किसी और का नाम लेके जलायेगें 😒🔥 उन्हें,
फिर सोचा 🤔 मैंने उन्हें तड़पाके दर्द 🥺 मुझको ही होगा,
तो फिर भला किस तरह सताए हम उन्हें|</string>
    <string name="str26">ना जाने 🤷‍♂️ किस बात पे वो नाराज 😠 हैं हमसे,
ख्वाबों 💭 मे भी मिलता हूँ तो बात नही करती 🥺</string>
    <string name="str27">ऐ मोहब्बत ❤️ तू शर्म से डूब मर,
तू एक शख्स को मेरा ना कर सकी 🥺|</string>
    <string name="str28">वो बात क्या करें जिसकी कोई खबर 🗞️ ना हो,
वो दुआ 🤲 क्या करें जिसका कोई असर ना हो,
कैसे कह दे कि लग जाय हमारी उमर आपको,
क्या पता 🤷‍♂️ अगले पल हमारी उमर ना हो</string>
    <string name="str29">अगर नींद 😴 आ जाये तो, सो 🛏️ भी लिया करो,
रातों 🌃 को जागने से, मोहब्बत ❤️ लौटा नहीं करती।</string>
    <string name="str30">कितना अजीब है लोगों 👥 का अंदाज़-ए-मोहब्बत ❤️,
कितना अजीब है लोगों 👥 का अंदाज़-ए-मोहब्बत ❤️,
रोज़ एक नया ज़ख्म 🤕 देकर कहते हैं,
अपना ख्याल रखना।</string>
    <string name="str31">कुछ हार गई तकदीर कुछ टूट गये सपने 🥺,
कुछ गैरों ने किया बरबाद कुछ भूल गये अपने 😢।</string>
    <string name="str32">😢आँसू आ जाते है रोने 😭 से पहले,
ख्वाब 💭 टूट जाते है सोने से पहले,
लोग कहते है मोहब्बत💔 गुनाह है,
काश कोई रोक लेते गुनाह होने से पहले 🥺।</string>
    <string name="str33">ए नसीब जरा एक बात तो बता 🤔,
तू सबको आज़माता है
या मुझसे ही दुश्मनी है 🥺😢।।</string>
    <string name="str34">ए दिल ❤️ तू क्यों रोता 😢 है,
ये दुनिया 🌎 है,
यहाँ ऐसा ही होता है 🥺।।</string>
    <string name="str35">सिर्फ सहने वाला ही जानता है,
की दर्द कितना गहरा है 🥺।।</string>
    <string name="str36">अच्छे होते हैं वो लोग 👥 जो आकर चले जाते हैं 🙃,
थोड़ा ठहर कर जाने वाले बहुत रुलाते हैं 😢 !</string>
    <string name="str37">आँखें 👀 थक गई है आसमान को देखते देखते,
पर वो तारा ⭐ नहीं टूटता ,जिसे देखकर तुम्हें मांग लूँ।</string>
    <string name="str38">टूटे हुए काँच की तरह,
चकनाचूर हो गए🥺,
किसी को लग ना जाये,
इसलिए सबसे दूर हो गए🥺।।</string>
    <string name="str39">बात वफ़ा की होती तो कभी ना हारते 🤕,
बात नसीब की थी कुछ कर ना सके 😢।</string>
    <string name="str40">कुछ लोग 👥 मुझे अपना कहा 🗣️ करते थे साहब !
सच में वो लोग सिर्फ कहा ही करते थे 🥺🙃!!</string>
    <string name="str41">तू रख यकीन बस अपने इरादों पर 👍🏻,
तेरी हार तेरे हौसलों से बड़ी तो नही 👏🏻 |</string>
    <string name="str42">दिल ❤️ साफ़ करके मुलाक़ात की आदत डालो 😊,
धूल हटती है तो आईने 🪞 भी चमक उठते हैं |</string>
    <string name="str43">जो मुस्कुरा 😊 रहा है उसे दर्द 🤕 ने पाला होगा,
जो चल रहा है उसके पांव 🦶 में छाला होगा,
बिना संघर्ष के इंसान चमक नहीं सकता,
जो जलेगा उसी दिए में तो उजाला होगा |</string>
    <string name="str44">मिलेगी परिंदों 🕊️ को मंजिल यकीनन 👍🏻,
यह उनके फैले हुए पर 🪽 बोलते है,
अक्सर वो लोग 👥 खामोश 🤫 रहते हैं,
जमाने में जिनके हुनर बोलते हैं 😊 |</string>
    <string name="str45">जब टूटने लगे हौसले तो बस ये याद रखना 😊,
बिना मेहनत के हासिल तख्तो ताज नहीं होते,
ढूंढ लेना अंधेरों 🌑 में मंजिल अपनी,
जुगनू कभी रोशनी 🕯️ के मोहताज नहीं होते |</string>
    <string name="str46">बुझी हुई समा भी जल 🔥 सकती है,
तूफानों 🌀 से कश्ती 🚣 भी निकल सकती है,
होके मायूस ☹️ यू ना अपने इरादे बदल 🙅‍♂,
तेरी किस्मत कभी भी बदल सकती है ☺️|</string>
    <string name="str47">ऐ दोस्त मत सोच 🤔 इतना जिंदगी के बारे में,
जिसने जिंदगी दी है उसने भी तो कुछ सोचा 🤔होगा ☺️👍🏻|</string>
    <string name="str48">रख हौसला वो मंजर भी आएगा,
प्यासे के पास चलकर समंदर 🌊 भी आएगा,
थक कर ना बैठ ए मंजिल के मुसाफिर,
मंजिल भी मिलेगी मिलने का मजा भी आएगा 😊☺️ |</string>
    <string name="str49">क्यों घबराता 😰 है पगले दुख ☹️ होने से,
जीवन ही प्रारंभ हुआ है रोने 😢 से ☺️ |</string>
    <string name="str50">यदि अंधकार 🌑 से लड़ने का संकल्प कोई कर लेता है 🙂,
तो एक अकेला जुगनू भी सब अंधकार हर लेता है 😃 |</string>
    <string name="str51">काम करो ऐसा कि एक पहचान बन जाए ☺️,
हर कदम 🦶 ऐसा चलो कि निशान बन जाए,
यहां जिंदगी तो हर कोई काट लेता है 🙃,
जिंदगी जियो इस कदर कि मिसाल बन जाए 🔥☺️👍🏻।</string>
    <string name="str52">ये जिंदगी हसीं है इससे प्यार ❤️करो,
अभी है रात 🌠 तो सुबह 🌅 का इंतजार ⏰ करो,
वो पल भी आयेगा जिसकी ख्वाइश है आपको,
रब पर रखो भरोसा वक्त पर एतबार करो ☺️।</string>
    <string name="str53">लक्ष्य को पाने के लिए यदि हम तन,
मन और धन लगा देते है ☺️,
सच कहता हूं दोस्तों, कुंडली के
सितारे ⭐ भी अपनी जगह बदल लेते है ☺️☺️।</string>
    <string name="str54">वक्त ⏰ से लड़कर जो नसीब बदल ले,
इंसान वही जो अपनी तकदीर बदल ले 👍🏻☺️,
कल क्या होगा कभी मत सोचो 🤔,
क्या पता 🤷‍♂️ कल वक्त ⏰ खुद अपनी तस्वीर 📷 बदल ले ।</string>
    <string name="str55">हवाओ के भरोसे मत उड़ 🙅‍♂,
चट्टाने 🪨 तूफानों 🌀 का भी रुख मोड़ देती है,
अपने पंखों 🪽 पर भरोसा रख,
हवाओ के भरोसे तो पतंगे 🪁  उड़ा करती हैं ☺️।</string>
    <string name="str56">बेहतर से बेहतर की तलाश करो 🤔,
मिल जाए नदी 🚣 तो समंदर 😃 की तलाश करो,
टूट जाता है शीशा 🪞 पत्थर 🪨 की चोट से,
टूट जाए पत्थर 🪨 ऐसा शीशा 🪞 तलाश करों ।</string>
    <string name="str57">जिंदगी बहुत हसीन है☺️,
कभी हसांती है, तो कभी रुलाती 🥺 हैं,
लेकिन जो जिंदगी की भीड़ में खुश रहता हैं,
जिंदगी उसी के आगे सर झुकाती हैं ☺️☺️ ।</string>
    <string name="str58">बिना संघर्ष कोई महान नहीं होता 🙅‍♂,
बिना कुछ किए जय जय कार नहीं होता 🙅‍♂,
जब तक नहीं पढ़ती हथौड़े 🔨 की चोट 🤕 ,
तब तक कोई पत्थर 🪨 भगवान नही होता ।</string>
    <string name="str59">नज़र 👀 को बदलो तो नज़ारे बदल जाते हैं,
सोच 🤔 को बदलो तो सितारे ⭐ बदल जाते हैं,
कश्तियां 🚣 बदलने की जरूरत नहीं 🙅‍♂ यारों,
दिशा को बदलो खुद-ब-खुद किनारे बदल जाते हैं ☺️ ।</string>
    <string name="str60" />
    <string name="home">home</string>
    <string name="back">back</string>
    <string name="next">next</string>
    <string name="exit">exit</string>
    <string name="start">Start</string>
    <string name="love">Love</string>
    <string name="motivational">Motivational</string>
    <string name="sad">Sad</string>
    <string name="gif_splash_screen">gif splash screen</string>

</resources>